# adaptive-encoding-anomaly-detector

./: .gitignore  README.md  pyproject.toml
config/: defaults.py  feature_profile.py  ordinal_features.yaml
docs/: glossary.md  implementation-plan.md  portfolio_project_plan.md  project-plan.md  rationale.md
notebooks/: 01_eda.ipynb
src/: feature_profiler.py  feature_segmenter.py  utils.py
tests/: test_config_defaults.py  test_ordinal_features_yaml.py  test_profiler.py  test_segmenter.py
