[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-encoding-anomaly-detector"
version = "0.1.0"
description = "MILP-based encoding selection + LOF anomaly detection on IEEE-CIS fraud data"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
milp = ["pulp>=2.8", "highspy>=1.7"]
geometry = ["torch>=2.2"]
demo = ["streamlit>=1.32"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
exclude = ["tests*", "notebooks*", "demo*", "outputs*", "data*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
